<resources>
    <string name="app_name">StudentPlanner</string>
    <string name="main_title">Student Planner</string>
    <string name="main_subtitle">Organize your studies</string>
    <string name="tasks_title">Your tasks</string>
    <string name="no_tasks">No tasks yet</string>
    <string name="no_tasks_hint">Add your first task to get started</string>
    <string name="add_task">Add task</string>
    <string name="add_task_title">Add task</string>
    <string name="task_title_hint">Task title</string>
    <string name="save_task">Save task</string>
    <string name="task_title_required">Task title is required</string>
    <string name="delete_task_title">Delete task</string>
    <string name="delete_task_message">Are you sure you want to delete this task?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="edit_task_title">Edit task</string>
    <string name="save_changes">Save changes</string>
    <string name="task_details_title">Task Details</string>
    <string name="edit_task">Edit task</string>
    <string name="task_description_hint">Description</string>
    <string name="task_due_date_hint">Due date</string>
    <string name="task_description_label">Description</string>
    <string name="task_due_date_label">Due date</string>
    <string name="no_task_description">No description</string>
    <string name="no_task_due_date">No due date</string>
    <string name="task_subject_hint">Subject</string>
    <string name="no_task_subject">No subject</string>
    <string name="task_subject_label">Subject</string>
    <string name="task_completed">Completed</string>
    <string name="sort_tasks">Sort</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_due_date">Due date</string>
    <string name="sort_newest">Newest</string>
    <string name="sort_oldest">Oldest</string>
    <string name="filter_tasks">Filter</string>
    <string name="filter_by">Filter tasks</string>
    <string name="filter_all">All</string>
    <string name="filter_active">Active</string>
    <string name="filter_completed">Completed</string>
    <string name="filter_subject">Subject</string>
    <string name="all_subjects">All subjects</string>
    <string name="filter_by_subject">Filter by subject</string>
    <string name="filter_due_date">Date</string>
    <string name="filter_by_due_date">Filter by due date</string>
    <string name="filter_all_dates">All dates</string>
    <string name="filter_today">Today</string>
    <string name="filter_upcoming">Upcoming</string>
    <string name="filter_overdue">Overdue</string>
    <string name="filter_no_due_date">No due date</string>
</resources>